# ml-trading-bot

./: .gitignore  ARCHITECTURE.md  ML_TRADING_PLAN.md  README.md  alpaca_trading.py  ml_trader.py  paper_trade_validator.py  pyproject.toml  techAnalysis.py
.github/workflows/: trading_scanner.yml
.streamlit/: secrets.toml.example
Streaming_Method/: __init__.py  pattern_exits.py  scanner.py  streaming_alpaca.py
Streaming_Method/interactive_broker_deprecated/: __init__.py  ibkrTrading.py  orderManager.py
dashboard/: app.py  requirements.txt
data_collection/: __init__.py  historical_collector.py  historical_collector_4h.py
interactive_broker(depricated)/: ibkrTrading.py
ml/: __init__.py  binary_feature_builder.py  binary_predictor.py  binary_search.py  binary_sell_feature_builder.py  binary_sell_predictor.py  binary_sell_search.py  binary_trainer.py  catch22_search.py  feature_builder.py  hyperparameter_search.py  hyperparameter_search_4h.py  predictor.py  testing_notebook.ipynb  trainer.py
models/binary_search_results/: binary_search_20260109_182623.csv  binary_search_20260109_190811.csv  binary_search_20260109_194022.csv  binary_search_20260109_223955.csv  binary_search_20260110_034805.csv  binary_search_20260110_115710.csv  binary_search_20260110_133343.csv  binary_search_20260110_155751.csv  binary_search_20260110_214407.csv  binary_search_20260111_174300.csv  (+57 more)
paper_trade_log/: orders.csv  signals.csv
reports/: 2026-06-05_performance_report.md
saved_data/: FinVizData.csv  scan_results.csv
stock_picker/: stock_screener.py
(+17 files in other folders)
