[tool.poetry]
name = "auto-trade"
version = "0.1.0"
description = "Alpaca Trading Bot"
authors = ["jpetty"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
alpaca-trade-api = "^3.0.0"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
aeon = "^1.0.0"
scikit-learn = "^1.3.0"
pyarrow = "^14.0.0"
joblib = "^1.3.0"
numpy = "<2.0.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
pycatch22 = "^0.4.0"
xgboost = "^3.1.2"

[tool.poetry.group.dev.dependencies]
# Add dev dependencies here (pytest, black, etc.)
ipykernel = "^7.1.0"

[tool.poetry.group.legacy.dependencies]
# Legacy IB dependencies (optional, for ibkrTrading.py)
# ibapi = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"